[package]
name = "launchpad-crowdsales-rpc-runtime-api"
version = "0.1.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }

primitives = { package = "setheum-primitives", path = "../../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"primitives/std"
]
